run jshell with incubator plugins enabled so there are available when testing